themes/gophercon/static/2016/css/theme-gophercon.css
/*!
// Contents
// ------------------------------------------------

 1. Mixins
 2. Helper classes & resets
 3. Loader
 4. Colours
 5. Typography
 6. Spacing
 7. Buttons
 8. Navigation
 9. Slider, Dividers
 10. Speakers & Topics
 11. Schedule
 12. Galleries
 13. Pricing & FAQ
 14. Subscribe
 15. Contact
 16. Forms
 17. Footers

// --------------------------------------------------*/
/*!
// 1. Useful Mixins
// --------------------------------------------------*/
.vertical-align {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}
.vertical-align-cancel {
  top: 0px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}
.preserve-3d {
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}
.transition-100 {
  transition: all 0.1s ease-out;
  -webkit-transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
}
.transition-300 {
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
}
.transition-700 {
  transition: all 0.7s ease-out;
  -webkit-transition: all 0.7s ease-out;
  -moz-transition: all 0.7s ease-out;
}
.overlay:before {
  background-color: #333333;
  opacity: 0.5;
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  z-index: 1;
  top: 0px;
}
.overlay .container {
  position: relative;
  z-index: 2;
}
/*!
// 2. Helper Classes & Resets
// --------------------------------------------------*/
.go-right {
  right: 0px;
}
.go-left {
  left: 0px;
}
img {
  max-width: 100%;
}
.main-container {
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
}
.main-container,
.footer-container,
.nav-container,
nav {
  max-width: 1600px;
  margin: 0px auto;
}
.boxed-layout .main-container,
.boxed-layout .nav-container,
.boxed-layout nav,
.boxed-layout .footer-container {
  max-width: 1366px;
  left: 0;
  right: 0;
  margin: 0 auto;
}
.no-loader .loader {
  display: none !important;
}
/*!
// 3. Loader
// --------------------------------------------------*/
.loader {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: 99;
  background: #fff;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  opacity: 1;
}
.strip-holder {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 50%;
  margin-left: -50px;
  position: relative;
}
.strip-1,
.strip-2,
.strip-3 {
  width: 20px;
  height: 20px;
  background: #35566a;
  position: relative;
  -webkit-animation: stripMove 2s ease infinite alternate;
  animation: stripMove 2s ease infinite alternate;
  -moz-animation: stripMove 2s ease infinite alternate;
}
.strip-2 {
  -webkit-animation-duration: 2.1s;
  animation-duration: 2.1s;
  background-color: #44bde8;
}
.strip-3 {
  -webkit-animation-duration: 2.2s;
  animation-duration: 2.2s;
  background-color: #FFB452;
}
@-webkit-keyframes stripMove {
  0% {
    transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    -moz-transform: translate3d(0px, 0px, 0px);
  }
  50% {
    transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    -moz-transform: translate3d(0px, 0px, 0px);
    transform: scale(4, 1);
    -webkit-transform: scale(4, 1);
    -moz-transform: scale(4, 1);
  }
  100% {
    transform: translate3d(-50px, 0px, 0px);
    -webkit-transform: translate3d(-50px, 0px, 0px);
    -moz-transform: translate3d(-50px, 0px, 0px);
  }
}
@-moz-keyframes stripMove {
  0% {
    transform: translate3d(-50px, 0px, 0px);
    -webkit-transform: translate3d(-50px, 0px, 0px);
    -moz-transform: translate3d(-50px, 0px, 0px);
  }
  50% {
    transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    -moz-transform: translate3d(0px, 0px, 0px);
    transform: scale(4, 1);
    -webkit-transform: scale(4, 1);
    -moz-transform: scale(4, 1);
  }
  100% {
    transform: translate3d(50px, 0px, 0px);
    -webkit-transform: translate3d(50px, 0px, 0px);
    -moz-transform: translate3d(50px, 0px, 0px);
  }
}
@keyframes stripMove {
  0% {
    transform: translate3d(-50px, 0px, 0px);
    -webkit-transform: translate3d(-50px, 0px, 0px);
    -moz-transform: translate3d(-50px, 0px, 0px);
  }
  50% {
    transform: translate3d(0px, 0px, 0px);
    -webkit-transform: translate3d(0px, 0px, 0px);
    -moz-transform: translate3d(0px, 0px, 0px);
    transform: scale(4, 1);
    -webkit-transform: scale(4, 1);
    -moz-transform: scale(4, 1);
  }
  100% {
    transform: translate3d(50px, 0px, 0px);
    -webkit-transform: translate3d(50px, 0px, 0px);
    -moz-transform: translate3d(50px, 0px, 0px);
  }
}
.main-container {
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
}
nav {
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
}
.show-content {
  opacity: 1 !important;
}
.hide-loader {
  opacity: 0 !important;
}
/*!
// 4. Colours
// --------------------------------------------------*/
.background-dark {
  background-color: #333333 !important;
}
.color-heading {
  color: #333333;
}
/*!
// 5. Typography
// --------------------------------------------------*/
.text-white {
  color: #fff;
}
body {
  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-smoothing: antialiased;
  -webkit-font-smoothing: antialiased;
  color: #777777;
  font-size: 14px;
  line-height: 24px;
  background: #eee;
  -moz-osx-font-smoothing: grayscale;
}
/* ... */

